--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/platform-browser-dynamic",
-  "version": "17.2.0-rc.1+sha-78b48cc",
+  "version": "17.2.0+sha-0b95d14",
   "description": "Angular - library for using Angular in a web browser with JIT compilation",
   "author": "angular",
   "license": "MIT",
@@ -11,10 +11,10 @@
     "tslib": "^2.3.0"
   },
   "peerDependencies": {
-    "@angular/core": "17.2.0-rc.1+sha-78b48cc",
-    "@angular/common": "17.2.0-rc.1+sha-78b48cc",
-    "@angular/compiler": "17.2.0-rc.1+sha-78b48cc",
-    "@angular/platform-browser": "17.2.0-rc.1+sha-78b48cc"
+    "@angular/core": "17.2.0+sha-0b95d14",
+    "@angular/common": "17.2.0+sha-0b95d14",
+    "@angular/compiler": "17.2.0+sha-0b95d14",
+    "@angular/platform-browser": "17.2.0+sha-0b95d14"
   },
   "repository": {
     "type": "git",
