--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/platform-browser-dynamic",
-  "version": "18.0.0-next.6+sha-78e4af0",
+  "version": "18.0.0-rc.0+sha-92a1e59",
   "description": "Angular - library for using Angular in a web browser with JIT compilation",
   "author": "angular",
   "license": "MIT",
@@ -11,10 +11,10 @@
     "tslib": "^2.3.0"
   },
   "peerDependencies": {
-    "@angular/core": "18.0.0-next.6+sha-78e4af0",
-    "@angular/common": "18.0.0-next.6+sha-78e4af0",
-    "@angular/compiler": "18.0.0-next.6+sha-78e4af0",
-    "@angular/platform-browser": "18.0.0-next.6+sha-78e4af0"
+    "@angular/core": "18.0.0-rc.0+sha-92a1e59",
+    "@angular/common": "18.0.0-rc.0+sha-92a1e59",
+    "@angular/compiler": "18.0.0-rc.0+sha-92a1e59",
+    "@angular/platform-browser": "18.0.0-rc.0+sha-92a1e59"
   },
   "repository": {
     "type": "git",
