--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "@angular/platform-browser-dynamic",
-  "version": "18.0.0-rc.2+sha-69a8399",
+  "version": "18.0.2+sha-882cae1",
   "description": "Angular - library for using Angular in a web browser with JIT compilation",
   "author": "angular",
   "license": "MIT",
   "engines": {
-    "node": "^18.13.0 || >=20.9.0"
+    "node": "^18.19.1 || ^20.11.1 || >=22.0.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
   },
   "peerDependencies": {
-    "@angular/core": "18.0.0-rc.2+sha-69a8399",
-    "@angular/common": "18.0.0-rc.2+sha-69a8399",
-    "@angular/compiler": "18.0.0-rc.2+sha-69a8399",
-    "@angular/platform-browser": "18.0.0-rc.2+sha-69a8399"
+    "@angular/core": "18.0.2+sha-882cae1",
+    "@angular/common": "18.0.2+sha-882cae1",
+    "@angular/compiler": "18.0.2+sha-882cae1",
+    "@angular/platform-browser": "18.0.2+sha-882cae1"
   },
   "repository": {
     "type": "git",
