--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/platform-browser-dynamic",
-  "version": "18.1.0-next.4+sha-3d1bc5a",
+  "version": "18.1.0-rc.0+sha-7f5d70a",
   "description": "Angular - library for using Angular in a web browser with JIT compilation",
   "author": "angular",
   "license": "MIT",
@@ -11,10 +11,10 @@
     "tslib": "^2.3.0"
   },
   "peerDependencies": {
-    "@angular/core": "18.1.0-next.4+sha-3d1bc5a",
-    "@angular/common": "18.1.0-next.4+sha-3d1bc5a",
-    "@angular/compiler": "18.1.0-next.4+sha-3d1bc5a",
-    "@angular/platform-browser": "18.1.0-next.4+sha-3d1bc5a"
+    "@angular/core": "18.1.0-rc.0+sha-7f5d70a",
+    "@angular/common": "18.1.0-rc.0+sha-7f5d70a",
+    "@angular/compiler": "18.1.0-rc.0+sha-7f5d70a",
+    "@angular/platform-browser": "18.1.0-rc.0+sha-7f5d70a"
   },
   "repository": {
     "type": "git",
