--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/platform-browser-dynamic",
-  "version": "18.1.0-rc.0+sha-551ffbf",
+  "version": "18.1.0+sha-07a0b87",
   "description": "Angular - library for using Angular in a web browser with JIT compilation",
   "author": "angular",
   "license": "MIT",
@@ -11,10 +11,10 @@
     "tslib": "^2.3.0"
   },
   "peerDependencies": {
-    "@angular/core": "18.1.0-rc.0+sha-551ffbf",
-    "@angular/common": "18.1.0-rc.0+sha-551ffbf",
-    "@angular/compiler": "18.1.0-rc.0+sha-551ffbf",
-    "@angular/platform-browser": "18.1.0-rc.0+sha-551ffbf"
+    "@angular/core": "18.1.0+sha-07a0b87",
+    "@angular/common": "18.1.0+sha-07a0b87",
+    "@angular/compiler": "18.1.0+sha-07a0b87",
+    "@angular/platform-browser": "18.1.0+sha-07a0b87"
   },
   "repository": {
     "type": "git",
