--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/platform-browser-dynamic",
-  "version": "18.2.0-next.4+sha-ccbce8f",
+  "version": "18.2.0-rc.0+sha-02d613e",
   "description": "Angular - library for using Angular in a web browser with JIT compilation",
   "author": "angular",
   "license": "MIT",
@@ -11,10 +11,10 @@
     "tslib": "^2.3.0"
   },
   "peerDependencies": {
-    "@angular/core": "18.2.0-next.4+sha-ccbce8f",
-    "@angular/common": "18.2.0-next.4+sha-ccbce8f",
-    "@angular/compiler": "18.2.0-next.4+sha-ccbce8f",
-    "@angular/platform-browser": "18.2.0-next.4+sha-ccbce8f"
+    "@angular/core": "18.2.0-rc.0+sha-02d613e",
+    "@angular/common": "18.2.0-rc.0+sha-02d613e",
+    "@angular/compiler": "18.2.0-rc.0+sha-02d613e",
+    "@angular/platform-browser": "18.2.0-rc.0+sha-02d613e"
   },
   "repository": {
     "type": "git",
