--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/platform-browser-dynamic",
-  "version": "18.2.0-rc.0+sha-e50d239",
+  "version": "18.2.0+sha-d49e083",
   "description": "Angular - library for using Angular in a web browser with JIT compilation",
   "author": "angular",
   "license": "MIT",
@@ -11,10 +11,10 @@
     "tslib": "^2.3.0"
   },
   "peerDependencies": {
-    "@angular/core": "18.2.0-rc.0+sha-e50d239",
-    "@angular/common": "18.2.0-rc.0+sha-e50d239",
-    "@angular/compiler": "18.2.0-rc.0+sha-e50d239",
-    "@angular/platform-browser": "18.2.0-rc.0+sha-e50d239"
+    "@angular/core": "18.2.0+sha-d49e083",
+    "@angular/common": "18.2.0+sha-d49e083",
+    "@angular/compiler": "18.2.0+sha-d49e083",
+    "@angular/platform-browser": "18.2.0+sha-d49e083"
   },
   "repository": {
     "type": "git",
