--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/platform-browser-dynamic",
-  "version": "19.1.0-next.4+sha-c69f12f",
+  "version": "19.1.0-rc.0+sha-77b24cd",
   "description": "Angular - library for using Angular in a web browser with JIT compilation",
   "author": "angular",
   "license": "MIT",
@@ -11,10 +11,10 @@
     "tslib": "^2.3.0"
   },
   "peerDependencies": {
-    "@angular/core": "19.1.0-next.4+sha-c69f12f",
-    "@angular/common": "19.1.0-next.4+sha-c69f12f",
-    "@angular/compiler": "19.1.0-next.4+sha-c69f12f",
-    "@angular/platform-browser": "19.1.0-next.4+sha-c69f12f"
+    "@angular/core": "19.1.0-rc.0+sha-77b24cd",
+    "@angular/common": "19.1.0-rc.0+sha-77b24cd",
+    "@angular/compiler": "19.1.0-rc.0+sha-77b24cd",
+    "@angular/platform-browser": "19.1.0-rc.0+sha-77b24cd"
   },
   "repository": {
     "type": "git",
