--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/platform-browser-dynamic",
-  "version": "19.2.0-rc.0+sha-9b47275",
+  "version": "19.2.0+sha-8e9463b",
   "description": "Angular - library for using Angular in a web browser with JIT compilation",
   "author": "angular",
   "license": "MIT",
@@ -11,10 +11,10 @@
     "tslib": "^2.3.0"
   },
   "peerDependencies": {
-    "@angular/core": "19.2.0-rc.0+sha-9b47275",
-    "@angular/common": "19.2.0-rc.0+sha-9b47275",
-    "@angular/compiler": "19.2.0-rc.0+sha-9b47275",
-    "@angular/platform-browser": "19.2.0-rc.0+sha-9b47275"
+    "@angular/core": "19.2.0+sha-8e9463b",
+    "@angular/common": "19.2.0+sha-8e9463b",
+    "@angular/compiler": "19.2.0+sha-8e9463b",
+    "@angular/platform-browser": "19.2.0+sha-8e9463b"
   },
   "repository": {
     "type": "git",
