--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/platform-browser-dynamic",
-  "version": "20.0.0-next.2+sha-34f0453",
+  "version": "20.0.0-next.2+sha-3606aab",
   "description": "Angular - library for using Angular in a web browser with JIT compilation",
   "author": "angular",
   "license": "MIT",
@@ -11,10 +11,10 @@
     "tslib": "^2.3.0"
   },
   "peerDependencies": {
-    "@angular/core": "20.0.0-next.2+sha-34f0453",
-    "@angular/common": "20.0.0-next.2+sha-34f0453",
-    "@angular/compiler": "20.0.0-next.2+sha-34f0453",
-    "@angular/platform-browser": "20.0.0-next.2+sha-34f0453"
+    "@angular/core": "20.0.0-next.2+sha-3606aab",
+    "@angular/common": "20.0.0-next.2+sha-3606aab",
+    "@angular/compiler": "20.0.0-next.2+sha-3606aab",
+    "@angular/platform-browser": "20.0.0-next.2+sha-3606aab"
   },
   "repository": {
     "type": "git",
@@ -41,7 +41,10 @@
       "@angular/service-worker"
     ]
   },
-  "sideEffects": false,
+  "sideEffects": [
+    "./fesm2022/platform-browser-dynamic.mjs",
+    "./fesm2022/testing.mjs"
+  ],
   "module": "./fesm2022/platform-browser-dynamic.mjs",
   "typings": "./index.d.ts",
   "type": "module",
