--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "@angular/platform-browser-dynamic",
-  "version": "18.1.0-next.0+sha-87c5f3c",
+  "version": "20.0.0-next.9+sha-f4d60ff",
   "description": "Angular - library for using Angular in a web browser with JIT compilation",
   "author": "angular",
   "license": "MIT",
   "engines": {
-    "node": "^18.13.0 || >=20.9.0"
+    "node": "^20.11.1 || >=22.11.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
   },
   "peerDependencies": {
-    "@angular/core": "18.1.0-next.0+sha-87c5f3c",
-    "@angular/common": "18.1.0-next.0+sha-87c5f3c",
-    "@angular/compiler": "18.1.0-next.0+sha-87c5f3c",
-    "@angular/platform-browser": "18.1.0-next.0+sha-87c5f3c"
+    "@angular/core": "20.0.0-next.9+sha-f4d60ff",
+    "@angular/common": "20.0.0-next.9+sha-f4d60ff",
+    "@angular/compiler": "20.0.0-next.9+sha-f4d60ff",
+    "@angular/platform-browser": "20.0.0-next.9+sha-f4d60ff"
   },
   "repository": {
     "type": "git",
@@ -41,7 +41,10 @@
       "@angular/service-worker"
     ]
   },
-  "sideEffects": false,
+  "sideEffects": [
+    "./fesm2022/platform-browser-dynamic.mjs",
+    "./fesm2022/testing.mjs"
+  ],
   "module": "./fesm2022/platform-browser-dynamic.mjs",
   "typings": "./index.d.ts",
   "type": "module",
@@ -51,14 +54,10 @@
     },
     ".": {
       "types": "./index.d.ts",
-      "esm2022": "./esm2022/platform-browser-dynamic.mjs",
-      "esm": "./esm2022/platform-browser-dynamic.mjs",
       "default": "./fesm2022/platform-browser-dynamic.mjs"
     },
     "./testing": {
       "types": "./testing/index.d.ts",
-      "esm2022": "./esm2022/testing/testing.mjs",
-      "esm": "./esm2022/testing/testing.mjs",
       "default": "./fesm2022/testing.mjs"
     }
   }
