--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/platform-browser-dynamic",
-  "version": "20.0.0-next.9+sha-803c94c",
+  "version": "20.0.0-rc.0+sha-ea87eb4",
   "description": "Angular - library for using Angular in a web browser with JIT compilation",
   "author": "angular",
   "license": "MIT",
@@ -11,10 +11,10 @@
     "tslib": "^2.3.0"
   },
   "peerDependencies": {
-    "@angular/core": "20.0.0-next.9+sha-803c94c",
-    "@angular/common": "20.0.0-next.9+sha-803c94c",
-    "@angular/compiler": "20.0.0-next.9+sha-803c94c",
-    "@angular/platform-browser": "20.0.0-next.9+sha-803c94c"
+    "@angular/core": "20.0.0-rc.0+sha-ea87eb4",
+    "@angular/common": "20.0.0-rc.0+sha-ea87eb4",
+    "@angular/compiler": "20.0.0-rc.0+sha-ea87eb4",
+    "@angular/platform-browser": "20.0.0-rc.0+sha-ea87eb4"
   },
   "repository": {
     "type": "git",
