--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/platform-browser-dynamic",
-  "version": "20.1.0-next.0+sha-db06708-with-local-changes",
+  "version": "20.1.0-next.0+sha-c8dfe6d",
   "description": "Angular - library for using Angular in a web browser with JIT compilation",
   "author": "angular",
   "license": "MIT",
@@ -11,10 +11,10 @@
     "tslib": "^2.3.0"
   },
   "peerDependencies": {
-    "@angular/core": "20.1.0-next.0+sha-db06708-with-local-changes",
-    "@angular/common": "20.1.0-next.0+sha-db06708-with-local-changes",
-    "@angular/compiler": "20.1.0-next.0+sha-db06708-with-local-changes",
-    "@angular/platform-browser": "20.1.0-next.0+sha-db06708-with-local-changes"
+    "@angular/core": "20.1.0-next.0+sha-c8dfe6d",
+    "@angular/common": "20.1.0-next.0+sha-c8dfe6d",
+    "@angular/compiler": "20.1.0-next.0+sha-c8dfe6d",
+    "@angular/platform-browser": "20.1.0-next.0+sha-c8dfe6d"
   },
   "repository": {
     "type": "git",
