--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/platform-browser-dynamic",
-  "version": "20.0.0-rc.1+sha-4916675",
+  "version": "20.0.0-rc.1+sha-cf92f0d-with-local-changes",
   "description": "Angular - library for using Angular in a web browser with JIT compilation",
   "author": "angular",
   "license": "MIT",
@@ -11,10 +11,10 @@
     "tslib": "^2.3.0"
   },
   "peerDependencies": {
-    "@angular/core": "20.0.0-rc.1+sha-4916675",
-    "@angular/common": "20.0.0-rc.1+sha-4916675",
-    "@angular/compiler": "20.0.0-rc.1+sha-4916675",
-    "@angular/platform-browser": "20.0.0-rc.1+sha-4916675"
+    "@angular/core": "20.0.0-rc.1+sha-cf92f0d-with-local-changes",
+    "@angular/common": "20.0.0-rc.1+sha-cf92f0d-with-local-changes",
+    "@angular/compiler": "20.0.0-rc.1+sha-cf92f0d-with-local-changes",
+    "@angular/platform-browser": "20.0.0-rc.1+sha-cf92f0d-with-local-changes"
   },
   "repository": {
     "type": "git",
